--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.6.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^6.0.0-rc.1"
   }
 }
