--- a/class/package.json
+++ b/class/package.json
@@ -19,5 +19,13 @@
         "next": "12.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2"
-    }
+    },
+    "devDependencies": {
+        "@types/node": "17.0.2",
+        "@types/react": "17.0.2",
+        "typescript": "^5.0.4"
+    },
+    "resolutions": {
+    "@types/react": "17.0.2"
+  }
 }
