--- a/class/package.json
+++ b/class/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "generate": "graphql-codegen"
     },
     "dependencies": {
         "@apollo/client": "^3.7.14",
@@ -18,14 +19,17 @@
         "graphql": "^16.6.0",
         "next": "12.1.0",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "ts-node": "^10.9.1"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "^4.0.0",
+        "@graphql-codegen/typescript": "^4.0.0",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
         "typescript": "^5.0.4"
     },
     "resolutions": {
-    "@types/react": "17.0.2"
-  }
+        "@types/react": "17.0.2"
+    }
 }
