--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -27,7 +27,16 @@
         "@graphql-codegen/typescript": "^4.0.0",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
-        "typescript": "^5.0.4"
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-standard-with-typescript": "^34.0.1",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.32.2",
+        "prettier": "2.8.8",
+        "typescript": "*"
     },
     "resolutions": {
         "@types/react": "17.0.2"
