--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -10,6 +10,7 @@
         "generate": "graphql-codegen"
     },
     "dependencies": {
+        "@ant-design/icons": "^5.1.4",
         "@apollo/client": "^3.7.14",
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
@@ -19,7 +20,9 @@
         "graphql": "^16.6.0",
         "next": "12.1.0",
         "react": "17.0.2",
+        "react-daum-postcode": "^3.1.1",
         "react-dom": "17.0.2",
+        "react-player": "^2.12.0",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
