--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -23,11 +23,14 @@
         "react-daum-postcode": "^3.1.1",
         "react-dom": "17.0.2",
         "react-player": "^2.12.0",
+        "react-slick": "^0.29.0",
+        "slick-carousel": "^1.8.1",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^4.0.0",
         "@graphql-codegen/typescript": "^4.0.0",
+        "@types/react-slick": "^0.23.10",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
