--- a/class/codegen.yaml
+++ b/class/codegen.yaml
@@ -1,4 +1,4 @@
-schema: http://backend-example.codebootcamp.co.kr/graphql
+schema: http://backend-practice.codebootcamp.co.kr/graphql
 generates:
     ./src/commons/types/generated/types.ts:
         plugins:
