--- a/class/package.json
+++ b/class/package.json
@@ -15,6 +15,7 @@
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
         "@material-ui/core": "^4.12.4",
+        "@types/react-infinite-scroller": "^1.2.3",
         "antd": "^5.5.0",
         "axios": "^1.4.0",
         "graphql": "^16.6.0",
@@ -22,6 +23,7 @@
         "react": "17.0.2",
         "react-daum-postcode": "^3.1.1",
         "react-dom": "17.0.2",
+        "react-infinite-scroller": "^1.2.6",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
