--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -15,6 +15,7 @@
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
         "@material-ui/core": "^4.12.4",
+        "@types/react-infinite-scroller": "^1.2.3",
         "antd": "^5.5.0",
         "axios": "^1.4.0",
         "graphql": "^16.6.0",
@@ -22,6 +23,7 @@
         "react": "17.0.2",
         "react-daum-postcode": "^3.1.1",
         "react-dom": "17.0.2",
+        "react-infinite-scroller": "^1.2.6",
         "react-player": "^2.12.0",
         "react-slick": "^0.29.0",
         "slick-carousel": "^1.8.1",
@@ -30,9 +32,9 @@
     "devDependencies": {
         "@graphql-codegen/cli": "^4.0.0",
         "@graphql-codegen/typescript": "^4.0.0",
-        "@types/react-slick": "^0.23.10",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
+        "@types/react-slick": "^0.23.10",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.8.0",
