--- a/class/package.json
+++ b/class/package.json
@@ -18,6 +18,7 @@
         "@types/react-infinite-scroller": "^1.2.3",
         "antd": "^5.5.0",
         "axios": "^1.4.0",
+        "firebase": "^9.23.0",
         "graphql": "^16.6.0",
         "next": "12.1.0",
         "react": "17.0.2",
