--- a/class/package.json
+++ b/class/package.json
@@ -11,12 +11,13 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.1.4",
-        "@apollo/client": "^3.7.14",
+        "@apollo/client": "^3.7.1",
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
         "@material-ui/core": "^4.12.4",
         "@types/react-infinite-scroller": "^1.2.3",
         "antd": "^5.5.0",
+        "apollo-upload-client": "^17.0.0",
         "axios": "^1.4.0",
         "firebase": "^9.23.0",
         "graphql": "^16.6.0",
@@ -30,6 +31,7 @@
     "devDependencies": {
         "@graphql-codegen/cli": "^4.0.0",
         "@graphql-codegen/typescript": "^4.0.0",
+        "@types/apollo-upload-client": "^17.0.2",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
