--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -11,12 +11,13 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.1.4",
-        "@apollo/client": "^3.7.14",
+        "@apollo/client": "^3.7.1",
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
         "@material-ui/core": "^4.12.4",
         "@types/react-infinite-scroller": "^1.2.3",
         "antd": "^5.5.0",
+        "apollo-upload-client": "^17.0.0",
         "axios": "^1.4.0",
         "graphql": "^16.6.0",
         "next": "12.1.0",
@@ -27,14 +28,17 @@
         "react-player": "^2.12.0",
         "react-slick": "^0.29.0",
         "slick-carousel": "^1.8.1",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^4.0.0",
         "@graphql-codegen/typescript": "^4.0.0",
+        "@types/apollo-upload-client": "^17.0.2",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
         "@types/react-slick": "^0.23.10",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.8.0",
