--- a/class/package.json
+++ b/class/package.json
@@ -21,19 +21,23 @@
         "axios": "^1.4.0",
         "firebase": "^9.23.0",
         "graphql": "^16.6.0",
+        "lodash": "^4.17.21",
         "next": "12.1.0",
         "react": "17.0.2",
         "react-daum-postcode": "^3.1.1",
         "react-dom": "17.0.2",
         "react-infinite-scroller": "^1.2.6",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^4.0.0",
         "@graphql-codegen/typescript": "^4.0.0",
         "@types/apollo-upload-client": "^17.0.2",
+        "@types/lodash": "^4.14.195",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.8.0",
