--- a/class/package.json
+++ b/class/package.json
@@ -27,6 +27,7 @@
         "react-daum-postcode": "^3.1.1",
         "react-dom": "17.0.2",
         "react-infinite-scroller": "^1.2.6",
+        "recoil": "^0.7.7",
         "ts-node": "^10.9.1",
         "uuid": "^9.0.0"
     },
