--- a/class/package.json
+++ b/class/package.json
@@ -14,6 +14,7 @@
         "@apollo/client": "^3.7.1",
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
+        "@hookform/resolvers": "^3.1.1",
         "@material-ui/core": "^4.12.4",
         "@types/react-infinite-scroller": "^1.2.3",
         "antd": "^5.5.0",
@@ -26,10 +27,12 @@
         "react": "17.0.2",
         "react-daum-postcode": "^3.1.1",
         "react-dom": "17.0.2",
+        "react-hook-form": "^7.45.0",
         "react-infinite-scroller": "^1.2.6",
         "recoil": "^0.7.7",
         "ts-node": "^10.9.1",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "yup": "^1.2.0"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^4.0.0",
