--- a/class/package.json
+++ b/class/package.json
@@ -20,6 +20,7 @@
         "antd": "^5.5.0",
         "apollo-upload-client": "^17.0.0",
         "axios": "^1.4.0",
+        "dompurify": "^3.0.4",
         "firebase": "^9.23.0",
         "graphql": "^16.6.0",
         "lodash": "^4.17.21",
@@ -29,6 +30,7 @@
         "react-dom": "17.0.2",
         "react-hook-form": "^7.45.0",
         "react-infinite-scroller": "^1.2.6",
+        "react-quill": "^2.0.0",
         "recoil": "^0.7.7",
         "ts-node": "^10.9.1",
         "uuid": "^9.0.0",
@@ -38,6 +40,7 @@
         "@graphql-codegen/cli": "^4.0.0",
         "@graphql-codegen/typescript": "^4.0.0",
         "@types/apollo-upload-client": "^17.0.2",
+        "@types/dompurify": "^3.0.2",
         "@types/lodash": "^4.14.195",
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
