--- a/class/package.json
+++ b/class/package.json
@@ -23,6 +23,7 @@
         "dompurify": "^3.0.4",
         "firebase": "^9.23.0",
         "graphql": "^16.6.0",
+        "graphql-request": "^6.1.0",
         "lodash": "^4.17.21",
         "next": "12.1.0",
         "react": "17.0.2",
@@ -34,7 +35,8 @@
         "recoil": "^0.7.7",
         "ts-node": "^10.9.1",
         "uuid": "^9.0.0",
-        "yup": "^1.2.0"
+        "yup": "^1.2.0",
+        "zen-observable": "^0.10.0"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^4.0.0",
@@ -45,6 +47,7 @@
         "@types/node": "17.0.2",
         "@types/react": "17.0.2",
         "@types/uuid": "^9.0.2",
+        "@types/zen-observable": "^0.8.3",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.8.0",
